--- a/src/styles/plan.css
+++ b/src/styles/plan.css
@@ -7,7 +7,7 @@
   background-position-y: top;
   background-size: cover;
   padding: 0 10px;
-  background-color: #151824; /* same as image */
+  background-color: var(--background-color);
   color: var(--text-color);
   display: flex;
   flex-direction: column;
@@ -110,12 +110,12 @@
   color: var(--your-team-color);
   text-shadow: 1px 2px 1px #000;
 
-  background-color: #151824; /* same as image */
+  background-color: var(--background-color);
   margin: 5px auto 0 auto;
   padding: 5px 10px;
   border-radius: 6px;
 
-  box-shadow: 0 0 6px 3px var(--your-team-color-alpha);
+  box-shadow: 0 0 6px 6px var(--background-color);
 }
 
 #plan-view #available-actions {
@@ -158,10 +158,6 @@
   margin: 5px;
 }
 
-#plan-view #actions .cooldown {
-  margin-top: 5px;
-}
-
 #plan-view #actions .cooldown span {
   font-weight: bold;
 }
@@ -177,6 +173,8 @@
 #plan-view #actions .cooldown {
   font-family: var(--font-mono);
   font-size: 14px;
+  font-weight: bold;
+  margin-top: 10px;
 }
 
 #plan-view #player-actions {
